--- a/treelink/index.html
+++ b/treelink/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="./src/assets/headshot.jpg" />
+    <link rel="icon" type="image/png" href="./src/assets/favicon.png" />
     
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bousada Linktree</title>
+    <title>Josh Bousada</title>
   </head>
   <body>
     <div id="app">    </div>
